--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: brown;
+    color: rgb(112, 130, 54);
 }
 body{
-    background-color: bisque;
+    background-color: rgb(226, 216, 205);
 }
